[package]
name = "new_logic_gates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.4", features = ["lua54", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sdl2 = "0.35"
egui_sdl2_gl = "*"


[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]